# AITMS

./: .gitignore  LICENSE  README.md  pyproject.toml
reference/: uitestx.py
src/aitms/: __init__.py  __main__.py  config.py  main.py
src/aitms/core/: signal_controller.py  types.py  vehicle_detector.py
src/aitms/ui/: app.py  lane_panel.py  traffic_light.py
src/aitms/utils/: logging_setup.py
