[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aitms"
version = "0.2.0"
description = "Automated Intelligent Traffic Management System — adaptive traffic signal control using computer vision"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Phanindra JSP"},
]
keywords = [
    "traffic-management",
    "computer-vision",
    "opencv",
    "intelligent-transport",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/phanijsp/AITMS"
Repository = "https://github.com/phanijsp/AITMS"
Issues = "https://github.com/phanijsp/AITMS/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
